Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89753

prefers-color-scheme does not seem to work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.3
    • 5.15.2
    • WebEngine
    • None
    • Arch Linux
    • Linux/Wayland

      On a browser that uses QtWebEngine, like falkon 3.1.0 or qutebrowser 1.14.1:

        • In Firefox, the "Night (changes in light scheme)" cell is displayed with a light theme.
        • With my QtWebEngine browsers, the same cell is displayed with a dark theme

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            krobelus Johannes Altmanninger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes