Add back prefers-color-scheme support

Task-number: QTBUG-89753
Change-Id: I89552671de0127d4e74ede4ca5f7fc4eab8cae6d
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>